--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -25,3 +25,6 @@ jobs:
         uses: "pascalgn/automerge-action@135f0bdb927d9807b5446f7ca9ecc2c51de03c4a"
         env:
           GITHUB_TOKEN: "${{ secrets.AUTOMERGE }}"
+          MERGE_FILTER_AUTHOR: "Timeraa"
+          MERGE_LABELS: ""
+          UPDATE_LABELS: ""
