--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,4 +1,4 @@
-name: automerge
+name: SeMiD
 on:
   pull_request:
     types:
@@ -22,9 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: automerge
-        uses: "pascalgn/automerge-action@135f0bdb927d9807b5446f7ca9ecc2c51de03c4a"
+        uses: "pascalgn/automerge-action@latest"
         env:
           GITHUB_TOKEN: "${{ secrets.AUTOMERGE }}"
           MERGE_FILTER_AUTHOR: "Timeraa"
           MERGE_LABELS: ""
           UPDATE_LABELS: ""
+          MERGE_COMMIT_MESSAGE: "*beep boop*"
